@@ -24,7 +24,7 @@ import static com.android.tools.idea.rendering.classloading.ClassConverter.getMi
 import static com.android.tools.idea.rendering.classloading.ClassConverter.isValidClassFile;
 import static com.android.tools.idea.rendering.classloading.ClassConverter.jdkToClassVersion;
 import static com.android.tools.idea.rendering.classloading.ClassConverter.rewriteClass;
-import static com.android.tools.idea.rendering.classloading.UtilKt.multiTransformOf;
+import static com.android.tools.idea.rendering.classloading.UtilKt.toClassTransform;
 import static com.google.common.truth.Truth.assertThat;
 import static org.jetbrains.org.objectweb.asm.Opcodes.ACC_PROTECTED;
 import static org.jetbrains.org.objectweb.asm.Opcodes.ACC_PUBLIC;
@@ -47,10 +47,14 @@ import static org.jetbrains.org.objectweb.asm.Opcodes.V1_7;
 
 import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.Lists;
+import com.intellij.openapi.util.text.StringUtil;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.function.Consumer;
+import java.util.function.Function;
+import java.util.regex.Pattern;
 import junit.framework.TestCase;
+import org.jetbrains.annotations.NotNull;
 import org.jetbrains.org.objectweb.asm.ClassReader;
 import org.jetbrains.org.objectweb.asm.ClassVisitor;
 import org.jetbrains.org.objectweb.asm.ClassWriter;
@@ -136,29 +140,32 @@ public class ClassConverterTest extends TestCase {
     assertEquals(0, getMinorVersion(data));
     assertEquals(0xCAFEBABE, getMagic(data));
 
-    ClassLoader classLoader = new TestClassLoader(ImmutableMap.of("Test", data));
+    ImmutableMap<String,byte[]> classMap = ImmutableMap.of("Test", data);
+    ClassLoader classLoader = new TestClassLoader(classMap);
     Class<?> clz = classLoader.loadClass("Test");
     assertNotNull(clz);
     Object result = clz.getMethod("test").invoke(null);
-    assertEquals(Integer.valueOf(42), result);
+    assertEquals(42, result);
     Class<?> oldClz = clz;
 
-    data = rewriteClass(data, visitor -> new VersionClassTransform(visitor, 48, Integer.MIN_VALUE));
+    data = rewriteClass(data, toClassTransform(visitor -> new VersionClassTransform(visitor, 48, Integer.MIN_VALUE)),
+                        new TestClassLocator(classMap));
     assertEquals(48, getMajorVersion(data));
     classLoader = new TestClassLoader(ImmutableMap.of("Test", data));
     clz = classLoader.loadClass("Test");
     assertNotNull(clz);
     assertNotSame(clz, oldClz);
     result = clz.getMethod("test").invoke(null);
-    assertEquals(Integer.valueOf(42), result);
+    assertEquals(42, result);
 
-    data = rewriteClass(data, visitor -> new VersionClassTransform(visitor, Integer.MAX_VALUE, 52)); // latest known
+    data = rewriteClass(data, toClassTransform(visitor -> new VersionClassTransform(visitor, Integer.MAX_VALUE, 52)),
+                        new TestClassLocator(classMap)); // latest known
     assertEquals(52, getMajorVersion(data));
     classLoader = new TestClassLoader(ImmutableMap.of("Test", data));
     clz = classLoader.loadClass("Test");
     assertNotNull(clz);
     result = clz.getMethod("test").invoke(null);
-    assertEquals(Integer.valueOf(42), result);
+    assertEquals(42, result);
 
     // Make sure that that class cannot actually be loaded in the regular way
     try {
@@ -249,7 +256,7 @@ public class ClassConverterTest extends TestCase {
     byte[] data = ClassConverterTest.dumpTestViewClass();
 
     assertTrue(isValidClassFile(data));
-    byte[] modified = rewriteClass(data, visitor -> new ViewMethodWrapperTransform(visitor));
+    byte[] modified = rewriteClass(data, toClassTransform(ViewMethodWrapperTransform::new), NopClassLocator.INSTANCE);
     assertTrue(isValidClassFile(data));
 
     // Parse both classes and compare
@@ -278,31 +285,34 @@ public class ClassConverterTest extends TestCase {
     assertTrue(isValidClassFile(firstData));
     assertTrue(isValidClassFile(secondData));
 
+    ImmutableMap<String, byte[]> classes = ImmutableMap.of(
+      "FirstClass", firstData,
+      "SecondClass", secondData
+    );
     ClassLoader loader = new ClassLoader() {
       @Override
       protected Class<?> findClass(String name) throws ClassNotFoundException {
-        if (name.equals("FirstClass")) {
-          return defineClass(name, firstData, 0, firstData.length);
-        }
-        if (name.equals("SecondClass")) {
-          return defineClass(name, secondData, 0, secondData.length);
+        if (classes.containsKey(name)) {
+          byte[] data = classes.get(name);
+          return defineClass(name, data, 0, data.length);
         }
         return super.findClass(name);
       }
     };
+    PseudoClassLocator locator = new TestClassLocator(classes);
     Class<?> clazz = loader.loadClass("FirstClass");
-    Object o = clazz.newInstance();
+    Object o = clazz.getDeclaredConstructor().newInstance();
     int outValue = (Integer)clazz.getMethod("test").invoke(o);
     assertEquals(1, outValue);
     clazz = loader.loadClass("SecondClass");
-    o = clazz.newInstance();
+    o = clazz.getDeclaredConstructor().newInstance();
     outValue = (Integer)clazz.getMethod("test").invoke(o);
     assertEquals(2, outValue);
 
 
     // Modify the classes and repeat.
-    final byte[] modifiedFirstData = rewriteClass(firstData, visitor -> new VersionClassTransform(visitor, 50, 0));
-    final byte[] modifiedSecondData = rewriteClass(secondData, visitor -> new VersionClassTransform(visitor, 50, 0));
+    final byte[] modifiedFirstData = rewriteClass(firstData, toClassTransform(visitor -> new VersionClassTransform(visitor, 50, 0)), locator);
+    final byte[] modifiedSecondData = rewriteClass(secondData, toClassTransform(visitor -> new VersionClassTransform(visitor, 50, 0)), locator);
     loader = new ClassLoader() {
       @Override
       protected Class<?> findClass(String name) throws ClassNotFoundException {
@@ -316,39 +326,82 @@ public class ClassConverterTest extends TestCase {
       }
     };
     clazz = loader.loadClass("FirstClass");
-    o = clazz.newInstance();
+    o = clazz.getDeclaredConstructor().newInstance();
     outValue = (Integer)clazz.getMethod("test").invoke(o);
     assertEquals(1, outValue);
     clazz = loader.loadClass("SecondClass");
-    o = clazz.newInstance();
+    o = clazz.getDeclaredConstructor().newInstance();
     outValue = (Integer)clazz.getMethod("test").invoke(o);
     assertEquals(2, outValue);
   }
 
   /**
-   * Ensure that {@link UtilKt#multiTransformOf} produces a valid visitor that calls all the other ones.
+   * Ensure that {@link UtilKt#toClassTransform} produces a valid visitor that calls all the other ones.
    */
   public void testMultiTransform() {
     byte[] data = ClassConverterTest.dumpTestViewClass();
 
     {
       Set<String> called = new HashSet<>();
-      rewriteClass(data, multiTransformOf(
+      rewriteClass(data, toClassTransform(
         visitor -> new TestVisitor(visitor, name -> called.add("Visitor1")),
         visitor -> new TestVisitor(visitor, name -> called.add("Visitor2"))
-      ));
+      ), NopClassLocator.INSTANCE);
       assertThat(called).containsExactly("Visitor1", "Visitor2");
     }
 
     {
       Set<String> called = new HashSet<>();
-      rewriteClass(data, multiTransformOf(visitor -> new TestVisitor(visitor, name -> called.add("Visitor1"))));
+      rewriteClass(data,
+                   toClassTransform(visitor -> new TestVisitor(visitor, name -> called.add("Visitor1"))),
+                   NopClassLocator.INSTANCE);
       assertThat(called).containsExactly("Visitor1");
     }
 
     {
       // Check that this does not cause any problems
-      rewriteClass(data, multiTransformOf());
+      rewriteClass(data, toClassTransform(), NopClassLocator.INSTANCE);
+    }
+  }
+
+  /**
+   * Ensure that {@link UtilKt#toClassTransform} produces a valid visitor that calls all the other ones.
+   */
+  public void testClassVisitorsGroup() {
+    {
+      ClassTransform visitorGroup = toClassTransform(
+        visitor -> new TestVisitor(visitor, name -> {}),
+        visitor -> new TestVisitorWithId(visitor, "AnId")
+      );
+
+      assertTrue(visitorGroup.getDebugId().startsWith("TestVisitorWithId AnId"));
+      assertTrue("Second element is expected to be an instance id", Pattern.matches(
+        TestVisitor.class.getCanonicalName() + ":\\p{Alnum}*\n",
+        StringUtil.substringAfter(visitorGroup.getDebugId(), "\n")));
+    }
+
+    {
+      ClassTransform visitorGroup = toClassTransform(
+        visitor -> new TestVisitorWithId(visitor, "Id1"),
+        // Identity should not be printed to the output
+        Function.identity(),
+        visitor -> new TestVisitorWithId(visitor, "Id2")
+      );
+
+      assertEquals("TestVisitorWithId Id2\n" +
+                   "TestVisitorWithId Id1\n", visitorGroup.getDebugId());
+    }
+
+    // Check the same as above without using identity. In this case, because the instance is not the same,
+    // it should be returned as part of the id.
+    {
+      ClassTransform visitorGroup = toClassTransform(
+        visitor -> new TestVisitorWithId(visitor, "Id1"),
+        visitor -> new TestVisitorWithId(visitor, "Id1")
+      );
+
+      assertEquals("TestVisitorWithId Id1\n" +
+                   "TestVisitorWithId Id1\n", visitorGroup.getDebugId());
     }
   }
 
@@ -460,6 +513,25 @@ public class ClassConverterTest extends TestCase {
       onVisited.accept(name);
 
       super.visit(version, access, name, signature, superName, interfaces);
+    }
+  }
+
+  /**
+   * {@link TestVisitor} with a {@link ClassVisitorUniqueIdProvider}
+   */
+  private static class TestVisitorWithId extends TestVisitor implements ClassVisitorUniqueIdProvider {
+    private final String parameter;
+
+    private TestVisitorWithId(ClassVisitor classVisitor, String parameter) {
+      super(classVisitor, ignore -> {});
+
+      this.parameter = parameter;
+    }
+
+    @NotNull
+    @Override
+    public String getUniqueId() {
+      return "TestVisitorWithId " + parameter;
     }
   }
 }
